Create class App, func.comp InfoContainer, ListItems, Item. Create basic style

--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ ul {
 .result-container {
   max-width: 600px;
   min-height: 85px;
-  padding: 0 30px;
+  padding: 30px;
+  margin-bottom: 10px;
   border-radius: 5px;
   background: #FFFFFF;
   color: rgb(72, 126, 176);
@@ -45,6 +46,13 @@ ul {
   /* text-align: center; */
   /* word-break: break-all; */
   /* letter-spacing: 1px; */
+}
+
+.result-container--info .result-box {
+  width: 150px;
+  padding: 5px 20px;
+  margin: 0 0 0 auto;
+  border-color: transparent;
 }
 
 .button-container {
@@ -113,10 +121,12 @@ ul {
 .result-box {
   /* display: inline-block; */
   /* width: fit-content; */
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 10px;
-  padding: 5px;
-  /* border-radius: 5px; */
-  border-bottom: 1px solid rgb(72, 126, 176);
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: 1px solid rgb(72, 126, 176);
   background: #FFFFFF;
   color: rgb(72, 126, 176);
   font-size: 15px;
@@ -124,10 +134,12 @@ ul {
   line-height: 15px;
   text-transform: uppercase;
   outline: none;
+  cursor: pointer;
 }
 
 .result-box:last-of-type {
-  border-bottom-color: transparent;
+  margin-bottom: 0;
+  /* border-bottom-color: transparent; */
 }
 
 .result-box h2 {
@@ -137,7 +149,13 @@ ul {
 .result-box p {
   text-transform: capitalize;
   font-weight: 300;
-  padding-bottom: 5px;
+  /* padding-bottom: 5px; */
+}
+
+.result-box__selected {
+  border-bottom: 1px solid rgb(72, 126, 176);
+  background: rgb(72, 126, 176);
+  color: #FFFFFF;
 }
 
 .transparent {
